<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:andriod="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <item
        android:id="@+id/profile_id"
        android:title="@string/ProfilePic"
        android:icon="@drawable/ic_person_black_24dp"/>

    <item
        android:id="@+id/NavAddPost_id"
        android:title= "@string/navAddPost"
        android:icon="@drawable/ic_present_to_all_black_24dp"/>

            <item
            android:id="@+id/nav_share_id"
            android:title= "@string/ShareApp"
            android:icon="@drawable/ic_share_black_24dp"/>

            <item
                android:id="@+id/logout_id"
                android:title="@string/Logout"
                android:icon="@drawable/logout"/>

    <item android:title="About">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/about_id"
                    android:title="Version 1.0"
                    android:icon="@drawable/ic_error_outline_black_24dp"/>
            </group>
        </menu>
    </item>

</menu>