<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbarFadeDuration="1"
    android:fillViewport="true"
    android:id="@+id/add_house_page"
    tools:context=".Add_House">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Add_House"
        android:focusableInTouchMode="true"
        android:id="@+id/add_PostPage_id"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/camera_id"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/camera_add"
            android:layout_centerHorizontal="true"/>


        <LinearLayout
            android:id="@+id/selectedImagesLayout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/camera_id"
            android:orientation="horizontal">

        </LinearLayout>


        <Button
            android:id="@+id/add_Photo_Btn_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/selectedImagesLayout_id"
            android:text="@string/addPhoto"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/limit_Txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Limit: 5 pictures"
            android:textColor="@color/colorBlue"
            android:layout_below="@+id/add_Photo_Btn_id"
            android:layout_marginStart="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:id="@+id/purpose_section_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/limit_Txt_id"
            android:orientation="vertical">
        <TextView
            android:id="@+id/pur_Txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select purpose:"
            android:textColor="@color/colorBlue"
            android:layout_marginStart="40dp"
            android:layout_alignParentStart="true"
            />
            <RadioGroup
                android:id="@+id/radiogroup_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/rentRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_marginStart="40dp"
                    android:buttonTint="@color/colorBlue"
                    android:text="Post for rent"/>
                <RadioButton
                    android:id="@+id/salesRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorBlue"
                    android:layout_marginStart="40dp"
                    android:text="Post for sales"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:id="@+id/title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AdPostDetails"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/purpose_section_id"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_id"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/location_EditTxt_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawablePadding="10dp"
            android:inputType="textAutoComplete"
            android:hint="Location"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"
            android:textSize="17sp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rentLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationLayout_id"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/rpm_EditTxt_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal"
            android:drawableLeft="@drawable/cedi"
            android:textSize="17sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rentLayout_id"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/telephone_EditTxt_id"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:hint="Telephone"
            android:textSize="17sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

      <TextView
          android:id="@+id/descTxt_id"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Description:"
          android:textSize="20dp"
          android:textColor="@color/colorBlack"
          android:layout_alignParentStart="true"
          android:layout_marginStart="30dp"
          android:layout_below="@+id/contactLayout_id"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DescriptionLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descTxt_id"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/Description_EditTxt_id"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:padding="10dp"
            android:focusedByDefault="false"
            android:background="@drawable/combox_bg"
            android:drawablePadding="10dp"
            android:textSize="20sp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/Post_Btn_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/DescriptionLayout_id"
        android:text="@string/addPost"
        android:textAllCaps="false"
        android:textSize="17dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        />
</RelativeLayout>

</ScrollView>